Fixed squares in card_container. Added text underneath. The text have to be wraped and the positioning can be optimized

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ button{
 }
 .card_container{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -97,7 +97,10 @@ button{
     align-items: center; /*necasery? */
 }
 .square{
-    border: 4px solid blue;
+    border: 5px solid blue;
+    border-radius: 20%;
+    width: 160px;
+    height: 160px;
 }
 
 
